examples/test/testpolicy15649.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15649
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key11: value28
      key37: value10
      key27: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value9
          key28: value1
          key33: value6
      podSelector:
        matchLabels:
          key22: value33
          key24: value29
          key15: value0
